--- a/scss/modal/modal.scss
+++ b/scss/modal/modal.scss
@@ -44,7 +44,7 @@
         &::after {
             content: '';
             height: 100%;
-            width: 50px;
+            width: 60px;
             background: #fff;
             position: absolute;
             right: 0;
@@ -52,12 +52,26 @@
             bottom: 0;
             z-index: 2;
         }
-        label {
+        .file_label {
             font: 1rem "400";
             color: #959595;
             width: 90%;
             overflow: hidden;
             box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            span {
+                height: 15px;
+                width: 15px;
+                display: inline-block;
+                position: relative;
+                z-index: 9;
+                &::after {
+                    content: url(../img/modal/del.svg);
+                    position: relative;
+                    margin-left: 7px;
+                }
+            }
         }
         .black {
             color: #000;
@@ -65,12 +79,12 @@
         input {
             position: absolute;
             opacity: 0;
-            left: 0;
-            height: 100%;
             right: 0;
+            z-index: 99;
+            height: 100%;
             top: 0;
             bottom: 0;
-            width: 100%;
+            width: 60px;
         }
         img {
             position: absolute;
