--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "home/home.scss";
 @import "page-item/page-item.scss";
 @import "catalog/catalog.scss";
+@import "bug/bug.scss";
 @import "footer/footer.scss";
 @import "modal/modal.scss";
 @import "constant/constant.scss";
