--- a/scss/modal/modal.scss
+++ b/scss/modal/modal.scss
@@ -22,6 +22,67 @@
     }
 }
 
+.adress_modal {
+    max-width: 345px;
+    margin: 0 auto;
+    background: #fff;
+    position: relative;
+    height: auto;
+    padding: 45px 15px 15px 15px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .adress_modal_wrap {
+        width: 100%;
+    }
+    .adres_titl {
+        margin-bottom: 10px;
+        color: #000;
+        font: 1.25rem "600";
+    }
+    .adress_output {
+        p {
+            font: .87rem "400";
+            margin-bottom: 15px;
+            padding-left: 18px;
+            padding-bottom: 5px;
+            border-bottom: 1px solid #A5A5A5;
+            position: relative;
+            &::after {
+                content: '';
+                height: 12px;
+                width: 12px;
+                border-radius: 50%;
+                position: absolute;
+                left: 0;
+                top: 2px;
+                background: #C1A790;
+            }
+        }
+        p:last-child {
+            border: none;
+        }
+    }
+    input {
+        color: #000;
+        padding:  15px;
+        appearance: none;
+        outline: none;
+        font: 1rem "400";
+        border: 1px solid #000000;
+        border-radius: 3px;
+        box-sizing: border-box;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    iframe {
+        width: 100%;
+        height: 280px;
+    }
+}
+
 .form_modal {
     max-width: 345px;
     margin: 0 auto;
