--- a/scss/bug/bug.scss
+++ b/scss/bug/bug.scss
@@ -240,10 +240,11 @@
                     margin-left: 5px;
                     appearance: none;
                     pointer-events: none;
+                    display: none;
                 }
                 select {
                     margin-left: 5px;
-                    appearance: none;
+                  
                     outline: none;
                     background: none;
                     border: none;
