--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "page-item/page-item.scss";
 @import "catalog/catalog.scss";
 @import "bug/bug.scss";
+@import "lk/lk.scss";
 @import "footer/footer.scss";
 @import "modal/modal.scss";
 @import "constant/constant.scss";
