--- a/css/main.css
+++ b/css/main.css
@@ -2992,7 +2992,9 @@ nav {
         color: #929292;
         font: .75rem "400";
         margin-left: -35px;
-        padding-left: 40px; }
+        padding-left: 40px;
+        margin-right: -20px;
+        padding-right: 20px; }
     .bug_page .bug_item_wrap .bug_item_info .bug_price {
       margin-top: 15px;
       color: #000;
@@ -3473,6 +3475,203 @@ nav {
   .polit a {
     text-decoration: underline;
     color: #000; }
+
+.bread {
+  margin-bottom: 20px; }
+  .bread ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .bread ul li {
+      padding-right: 8px;
+      margin-right: 8px;
+      position: relative; }
+      .bread ul li::after {
+        content: '/';
+        position: absolute;
+        right: -2px;
+        top: 1px; }
+      .bread ul li a, .bread ul li span {
+        font: .8rem "400";
+        color: #949494; }
+    .bread ul li:last-child::after {
+      content: ''; }
+
+.inside_wrap .inside_title {
+  font: 1.75rem "800";
+  margin-bottom: 25px; }
+
+.inside_wrap .inside_text {
+  font: .75rem "400";
+  margin-top: -15px;
+  margin-bottom: 10px; }
+
+.inside_wrap form {
+  margin-bottom: 80px;
+  /*Outer box of the fake checkbox*/
+  /*Checkmark of the fake checkbox*/
+  /*Hide the checkmark by default*/
+  /*Unhide on the checked state*/ }
+  .inside_wrap form .input_boxs {
+    margin-bottom: 10px; }
+    .inside_wrap form .input_boxs p {
+      display: none; }
+    .inside_wrap form .input_boxs input {
+      color: #000;
+      padding: 12px 10px;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
+      outline: none;
+      background: transparent;
+      font: 1rem "400";
+      border: 1px solid #000000;
+      border-radius: 3px;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      width: 100%; }
+  .inside_wrap form .red input {
+    border: 1px solid #CD0404; }
+  .inside_wrap form .red p {
+    font: .87rem "400";
+    color: #CD0404;
+    margin-top: 5px;
+    display: block; }
+  .inside_wrap form .checkbox input[type="checkbox"] {
+    opacity: 0;
+    position: absolute; }
+  .inside_wrap form .checkbox label {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 20px;
+    /*16px width of fake checkbox + 6px distance between fake checkbox and text*/
+    padding-left: 25px;
+    font: .87rem "600"; }
+  .inside_wrap form .checkbox label::before,
+  .inside_wrap form .checkbox label::after {
+    position: absolute;
+    content: "";
+    /*Needed for the line-height to take effect*/
+    display: inline-block; }
+  .inside_wrap form .checkbox label::before {
+    height: 16px;
+    width: 16px;
+    border-radius: 2px;
+    border: 1px solid;
+    left: 0px;
+    /*(24px line-height - 16px height of fake checkbox) / 2 - 1px for the border
+        *to vertically center it.
+        */
+    top: -1px; }
+  .inside_wrap form .checkbox label::after {
+    height: 4px;
+    width: 6px;
+    border-left: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    left: 5px;
+    top: 3.5px; }
+  .inside_wrap form .checkbox input[type="checkbox"] + label::after {
+    content: none; }
+  .inside_wrap form .checkbox input[type="checkbox"]:checked + label::after {
+    content: ""; }
+  .inside_wrap form .checkbox input[type="checkbox"]:checked + label::before {
+    content: "";
+    background: #000; }
+  .inside_wrap form button {
+    border: none;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 12px 10px;
+    text-align: center;
+    color: #fff;
+    background: #000;
+    border-radius: 3px;
+    font: 1.25rem "800"; }
+  .inside_wrap form .forget {
+    margin-top: 10px;
+    color: #000;
+    display: block;
+    text-align: center;
+    text-decoration: underline;
+    font: .87rem "600"; }
+
+.inside_social .inside_social_link {
+  font: 1rem "600";
+  color: #000;
+  margin-bottom: 15px;
+  text-align: center; }
+  .inside_social .inside_social_link a {
+    text-decoration: underline;
+    display: block;
+    color: #000; }
+
+.inside_social .inside_wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .inside_social .inside_wrap a {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 5px; }
+
+.inside_btn_cust {
+  margin-top: 40px;
+  text-align: center;
+  border: 1px solid #000000;
+  display: block;
+  background: #000;
+  font: 1.1rem "800";
+  padding: 12px;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px; }
+
+.create_wrap .create_btn {
+  margin-bottom: 10px;
+  text-align: center;
+  border: 1px solid #000000;
+  display: block;
+  font: 1.2rem "800";
+  padding: 12px;
+  margin-bottom: 10px;
+  color: #000;
+  text-align: center;
+  border-radius: 4px; }
+
+.create_wrap .create_link {
+  color: #000;
+  display: block;
+  text-decoration: underline;
+  font: .87rem "600";
+  text-align: center; }
 
 footer {
   margin-bottom: 15px;
