--- a/scss/bug/bug.scss
+++ b/scss/bug/bug.scss
@@ -251,6 +251,8 @@
                     font: .75rem "400";
                     margin-left: -35px;
                     padding-left: 40px;
+                    margin-right: -20px;
+                    padding-right: 20px;
                 }
             }
             .bug_price {
