--- a/scss/lk/lk.scss
+++ b/scss/lk/lk.scss
@@ -213,3 +213,333 @@
         text-align: center;
     }
 }
+
+.lk_wrap {
+    .lk_title {
+        font: 1.75rem "800";
+        margin-bottom: 10px;
+    }
+    .lk_name {
+        font: 1.125rem "600";
+        margin-bottom: 25px;
+        span {
+            color: #bc938b;
+        }
+    }
+    .acc_box {
+        padding-bottom: 15px;
+        position: relative;
+        margin-bottom: 15px;
+        &::after {
+            content: '';
+            background: #D9D9D9;
+            height: 1px;
+            width: 100%;
+            position: absolute;
+            top:100%;
+            left:50%;
+            transform:translate(-50%, -50%);
+        }
+        .acc-head {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            p {
+                font: 1.125rem "600";
+            }
+            svg {
+                transition: .3s;
+            }
+        }
+        .active_acc {
+            svg {
+                transform: rotate(180deg);
+            }
+        }
+        .acc-body {
+            position: relative;
+            margin: 25px 0;
+            .user_data {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap: 10px;
+                .input_box {
+                    display: flex;
+                    align-items: center;
+                    position: relative;
+                    a {
+                        position: absolute;
+                        height: 45px;
+                        right: 0;
+                        width: 40px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        top: 0;
+                    }
+                    input {
+                        width: 100%;
+                        box-sizing: border-box;
+                        padding: 12px 11px;
+                        border: 1px solid #000;
+                        border-radius: 4px;
+                        font: 1rem "600";
+                    }
+                }
+            }
+            .password {
+                width: 100%;
+                box-sizing: border-box;
+                border-radius: 4px;
+                border: 1px solid #000;
+                text-align: center;
+                padding: 12px;
+                font: 1.2rem "600";
+                text-align: center;
+                color: #000;
+            }
+        }
+    }
+    .lk_adress_wrap {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 25px;
+        .lk_adress_item {
+            display: grid;
+            grid-template-columns: 27px 1fr;
+            grid-gap: 15px;
+            .adress_btn {
+                height: 27px;
+                width: 27px;
+                border-radius: 50%;
+                border: 1px solid #000;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                span {
+                    opacity: 0;
+                    height: 17px;
+                    width: 17px;
+                    border-radius: 50%;
+                    background: #C1A790;
+                }
+            }
+            .adress_btn_active {
+                border: 1px solid #C1A790;
+                span {
+                    opacity: 1;
+                }
+            }
+            .adress_info {
+                position: relative;
+                .delete_adress {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                }
+                .stable {
+                    margin-bottom: 5px;
+                    font: .87rem "600";
+                    color: #C1A790;
+                }
+                .adress_title {
+                    font: 1rem "600";
+                    margin-bottom: 10px;
+                    max-width: 220px;
+                }
+                .adress_text {
+                    font: .75rem "400";
+                    margin-bottom: 10px;
+                    max-width: 270px;
+                }
+                .adress_link {
+                    color: #848484;
+                    text-decoration: underline;
+                    font: .87rem "400";
+                }
+            }
+        }
+    }
+    .add_btn {
+        margin-top: 30px;
+        font: 1.2rem "600";
+        background: #000;
+        border-radius: 4px;
+        color: #fff;
+        display: block;
+        text-align: center;
+        padding: 15px;
+    }
+    .none_order {
+        display: flex;
+        margin-bottom: 15px;
+        flex-direction: column;
+        p {
+            font: 1rem "400";
+            margin-bottom: 30px;
+        }
+        a {
+            font: 1.2rem "600";
+            background: #000;
+            border-radius: 4px;
+            color: #fff;
+            display: block;
+            text-align: center;
+            padding: 15px;
+        }
+    }
+    .lk_order_wrap {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 25px;
+        .lk_order_item {
+            background: #F8F8F8;
+            border-radius: 10px;
+            padding: 15px;
+            .lk_order_top {
+                margin-bottom: 20px;
+                .lk_num {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-bottom: 5px;
+                    p:first-child {
+                        font: 1.125rem "800";
+                        color: #9F5025;
+                    }
+                    p:last-child {
+                        font: .87rem "600";
+                        color: #000;
+                    }
+                }
+                .status_text {
+                    font: .87rem "800";
+                    margin-bottom: 20px;
+                }
+                .status_btn {
+                    font: .7rem "600";
+                    text-align: center;
+                    color: #fff;
+                    padding: 4px 10px;
+                    background: linear-gradient(0deg, #EB9B00, #EB9B00), #FFFFFF;
+                    border-radius: 2px;
+                    max-width: 80px;
+                }
+                .green {
+                    background: linear-gradient(0deg, #05913D, #05913D), #FFFFFF;
+                }
+            }
+            .lk_info_wrap {
+                margin-bottom: 25px;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap: 12px;
+                .lk_info_item {
+                    display: grid;
+                    grid-template-columns: 1fr 65px;
+                    align-items: center;
+                    grid-gap: 10px;
+                    p {
+                        font: .95rem "400";
+                        color: #626262;
+                        span {
+                            color: #000;
+                        }
+                    }
+                    a {
+                        text-decoration-line: underline;
+                        color: #C1A790;
+                        text-align: right;
+                        font: .7rem "400";
+                    }
+                }
+            }
+            .lk_img_wrap {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-gap: 20px;
+                align-items: center;
+                padding-bottom: 20px;
+                margin-bottom: 20px;
+                border-bottom: 1px solid #888888;
+                img {
+                    max-width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                    height: 95px;
+                    width: 100%;
+                }
+            }
+            .lk_price_all {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap: 5px;
+                .lk_price_item {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    p {
+                        font: 1rem "800";
+                    }
+                }
+                .lk_price_item:last-child {
+                    p {
+                        font: 1rem "400";
+                    }
+                }
+            }
+            .order_main_btn {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap: 10px;
+                margin-bottom: 10px;
+                margin-top: 50px;
+                a {
+                    background: transparent;
+                    text-align: center;
+                    border-radius: 4px;
+                    border: 1px solid #000;
+                    padding: 5px;
+                    font: 1.25rem "600";
+                    height: 40px;
+                    color: #000;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    img {
+                        height: 35px;
+                        margin-left: 5px;
+                    }   
+                }
+                a:first-child {
+                    background: #000;
+                    color: #fff;
+                }
+                a:last-child {
+                    img {
+                        position: relative;
+                        top: 2px;
+                    }
+                }
+            }            
+            .lk_order_bottom {
+                margin-top: 20px;
+                text-align: center;
+                color: #000;
+                display: block;
+                font: .87rem "800";
+                a {
+                    text-decoration: underline;
+                    display: block;
+                    color: #000;
+                }
+            }
+        }
+    }
+    .exit {
+        font: 1rem "600";
+        color: #000;
+        display: block;
+        margin-top: 25px;
+    }
+}
