--- a/scss/modal/modal.scss
+++ b/scss/modal/modal.scss
@@ -968,6 +968,9 @@
             align-items: center;
             justify-content: center;
         }
+        .eye_acti {
+            opacity: .6;
+        }
         .red {
             border-color: #CD0404;
         }
