--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -57,7 +57,7 @@ main {
                 height: 10px;
                 width: 10px;
                 position: absolute;
-                background: #B92362;
+                background: #000;
                 color: #fff;
                 font: 7px "600";
                 text-align: center;
