--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "catalog/catalog.scss";
 @import "bug/bug.scss";
 @import "lk/lk.scss";
+@import "order/order.scss";
 @import "footer/footer.scss";
 @import "modal/modal.scss";
 @import "constant/constant.scss";
