--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,55 @@ nav {
     color: #FFF;
     font: .625rem "400"; }
 
+.empty {
+  margin-top: 100px; }
+  .empty .container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .empty .container img {
+      max-width: 100%;
+      height: auto;
+      margin: 0 auto;
+      -o-object-fit: contain;
+         object-fit: contain;
+      margin-bottom: 40px;
+      max-width: 290px; }
+    .empty .container .empty_text {
+      font: 1rem/1 "800";
+      text-align: center;
+      margin-bottom: 45px; }
+    .empty .container a {
+      width: 100%;
+      display: block;
+      background: #000000;
+      border-radius: 4px;
+      text-align: center;
+      color: #fff;
+      font: 1.2rem "800";
+      padding: 12px;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box; }
+
+.select_box {
+  position: relative; }
+  .select_box::after {
+    pointer-events: none;
+    content: url(../img/arr.svg);
+    position: absolute;
+    right: 13px;
+    top: 15px; }
+  .select_box select {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none; }
+
 .home_img {
   margin-bottom: 5px; }
   .home_img img {
@@ -4038,6 +4087,14 @@ nav {
     color: #000; }
     .order_box_title .order_page_text span {
       color: #c1a790; }
+  .order_box_title .order_page_sm {
+    color: #000;
+    font: .87rem "400";
+    margin-bottom: 20px;
+    max-width: 320px; }
+    .order_box_title .order_page_sm a {
+      color: #c1a891;
+      font: .87rem "600"; }
   .order_box_title .order_id_text {
     font: 1.2rem "800";
     margin-bottom: 10px; }
@@ -4070,12 +4127,15 @@ nav {
       font: 1.125rem "400"; }
       .order_box_title .order_bottom p span {
         font: 1.125rem "800"; }
+    .order_box_title .order_bottom p:first-child::after {
+      content: url(../img/order/arr.svg);
+      margin-left: 5px; }
 
 .order_all p:first-child {
   font: 1.05rem "400" !important; }
 
 .order_pol_page {
-  margin-top: 15px;
+  margin-top: 20px;
   text-align: center;
   font: .87rem "800"; }
   .order_pol_page a {
@@ -4179,6 +4239,109 @@ nav {
 
 .stage_4::after {
   height: 98%; }
+
+.custom_bottom_order {
+  margin-top: 60px;
+  margin-bottom: 60px; }
+  .custom_bottom_order .custom_bottom_text {
+    text-align: center;
+    font: 1rem/20px "400";
+    margin-bottom: 20px; }
+  .custom_bottom_order .custom_bottom_link {
+    width: 100%;
+    display: block;
+    background: #000000;
+    border-radius: 4px;
+    text-align: center;
+    color: #fff;
+    font: 1.2rem "800";
+    padding: 12px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
+
+.order_social {
+  margin-bottom: 60px; }
+  .order_social p {
+    text-align: center;
+    margin-bottom: 15px;
+    color: #000;
+    font: 1.5rem "800"; }
+  .order_social .social_wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .order_social .social_wrap a {
+      margin: 0 5px; }
+
+.thank_block {
+  padding: 40px 0;
+  margin-top: 30px;
+  margin-bottom: -25px;
+  position: relative; }
+  .thank_block img {
+    max-width: 100%;
+    height: 100%;
+    min-width: 120%;
+    width: 120%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    position: absolute;
+    left: -10%;
+    top: 0; }
+  .thank_block .thank_title {
+    position: relative;
+    z-index: 9;
+    font: 1.5rem "900";
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 5px; }
+  .thank_block .thank_text {
+    font: .87rem "600";
+    text-align: center;
+    color: #000;
+    margin-bottom: 15px;
+    position: relative;
+    z-index: 9; }
+  .thank_block .thank_btn {
+    position: relative;
+    z-index: 9;
+    max-width: 260px;
+    margin: 0 auto;
+    text-align: center;
+    background: #9F5025;
+    border-radius: 6px;
+    padding: 10px 30px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 100%;
+    display: block;
+    color: #fff;
+    font: 1.125rem "800";
+    text-transform: uppercase;
+    margin-bottom: 20px; }
+  .thank_block .thank_sale {
+    position: relative;
+    z-index: 9;
+    font: 1.5rem "800";
+    color: #000;
+    text-align: center; }
+    .thank_block .thank_sale span {
+      color: #505050;
+      font: 1rem "600";
+      text-decoration: line-through; }
+
+.bug_page .bug_order_wrap_2 {
+  margin: 0;
+  margin-top: 35px; }
 
 footer {
   margin-bottom: 15px;
