--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -161,3 +161,50 @@ nav {
         font: .625rem "400";
     }
 }
+
+
+.empty {
+    margin-top: 100px;
+    .container {
+        display: flex;
+        flex-direction: column;
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 0 auto;
+            object-fit: contain;
+            margin-bottom: 40px;
+            max-width: 290px;
+        }
+        .empty_text {
+            font: 1rem/1 "800";
+            text-align: center;
+            margin-bottom: 45px;
+        }
+        a {
+            width: 100%;
+            display: block;
+            background: #000000;
+            border-radius: 4px;
+            text-align: center;
+            color: #fff;
+            font: 1.2rem "800";
+            padding: 12px;
+            box-sizing: border-box;
+        }
+    }
+}
+
+.select_box {
+    position: relative;
+    &::after {
+        pointer-events: none;
+        content: url(../img/arr.svg);
+        position: absolute;
+        right: 13px;
+        top: 15px;
+    }
+    select {
+        appearance: none;
+    }
+}
