--- a/scss/constant/constant.scss
+++ b/scss/constant/constant.scss
@@ -35,9 +35,9 @@ button {
 }
 
 
-main {
-    min-height: calc(100vh - 80px);
-}
+// main {
+//     min-height: calc(100vh - 80px);
+// }
 
 a {
     outline: none;
